0.4.0 - currently working on
- [#1541] Change: Remove the return; for functions that do not return anything
- [#1335] Change: Add scope="col" to the timer results table
- [#1422] Fix: Change tx_oelib_testingframework_testcase::testRemoveRelationOnRealRecord()
- [#1537] Change: Make the timer tests run faster
- [#1490] Change: Make "cache_pages" an allowed table
- [#1489] Change: The column "doktype" should not be allowed in createFrontEndPage and createSystemFolder
- [#1471] Change: Move the testing framework from tests/fixtures/ to the oelib main directory and rename it
- [#1470] Change: Include the BE template file
- [#1325] Feature: Added function to edit existing dummy records
- [#1183] Feature: Create an EM configuration proxy
- [#1464] Fix: Include all needed libraries in the template helper so it can be used from the CLI
- [#1459] Change: The testing framework should throw exceptions on errors instead of failing silently.
- [#1440] Feature: Add functions in the testing framework to create dummy content elements
- [#1419] Feature: Add functions in the testing framework to create dummy FE pages and dummy system folders
- [#1418] Change: testingframework::resetAutoIncrement and ::countRecords should allow every existing table
- [#1328] Feature: Add the "is_dummy_record" field to the fe_users, pages  and tt_content tables
- [#1378] Change: Remove the enableGlobalFunctions setting from the EM and use static methods instead
- [#1382] Feature: Testing framework: add sorting to created relations
- [#1400] Fix: Correct a few typos
- [#795] Fix: Unclosed markers wreck everything
- [#1399] Fix: testingframework::createRecords must check that the UID is not set
- [#1395] Fix: Increase the delta in the timer unit tests
- [#1383] Fix: Performance issue with the cleanUp() method in the testing framework
- [#1385] Fix: Permanently hiding subparts is broken
- [#1357] Fix: Unit test fails: testStatisticsForDefaultBucket