@@ -1,4 +1,5 @@
 0.4.0 - currently working on
+- [#1507] Feature: Add a utility function for getting associative DB results
 - [#1541] Change: Remove the return; for functions that do not return anything
 - [#1335] Change: Add scope="col" to the timer results table
 - [#1422] Fix: Change tx_oelib_testingframework_testcase::testRemoveRelationOnRealRecord()
